// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets all fields from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": "bounce/index",
  "id": "lodash",
  "platforms": [
    "ios",
  ],
  "qualified": "@scoped/lodash",
  "rebuild": false,
  "scope": "scoped",
  "sdkVersion": undefined,
  "tag": "14.5.2",
  "versionSnackager": false,
}
`;

exports[`gets deep path and tag from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": "bounce/index",
  "id": "lodash",
  "platforms": [
    "ios",
    "android",
    "web",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": undefined,
  "tag": "14.5.2",
  "versionSnackager": false,
}
`;

exports[`gets deep path from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": "bounce/index",
  "id": "lodash",
  "platforms": [
    "ios",
    "android",
    "web",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": undefined,
  "tag": "latest",
  "versionSnackager": false,
}
`;

exports[`gets id from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": undefined,
  "id": "lodash",
  "platforms": [
    "ios",
    "android",
    "web",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": undefined,
  "tag": "latest",
  "versionSnackager": false,
}
`;

exports[`gets platforms from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": "bounce/index",
  "id": "lodash",
  "platforms": [
    "ios",
    "android",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": undefined,
  "tag": "latest",
  "versionSnackager": false,
}
`;

exports[`gets sdkVersion from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": "bounce/index",
  "id": "lodash",
  "platforms": [
    "ios",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": "49.0.0",
  "tag": "latest",
  "versionSnackager": false,
}
`;

exports[`gets tag from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": undefined,
  "id": "lodash",
  "platforms": [
    "ios",
    "android",
    "web",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": undefined,
  "tag": "14.5.2",
  "versionSnackager": false,
}
`;

exports[`gets tag from request 2`] = `
{
  "bypassMetadataCache": false,
  "deep": "bounce/index",
  "id": "lodash",
  "platforms": [
    "ios",
  ],
  "qualified": "lodash",
  "rebuild": false,
  "scope": undefined,
  "sdkVersion": undefined,
  "tag": "latest",
  "versionSnackager": false,
}
`;

exports[`gets user from request 1`] = `
{
  "bypassMetadataCache": false,
  "deep": undefined,
  "id": "lodash",
  "platforms": [
    "ios",
    "android",
    "web",
  ],
  "qualified": "@scoped/lodash",
  "rebuild": false,
  "scope": "scoped",
  "sdkVersion": undefined,
  "tag": "latest",
  "versionSnackager": false,
}
`;
